fixed(?) separating secondary_top.css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *
  * Ohh, I see! The `require_tree .` bellow will also load `secondary_top.css` and `articles/articles.css`
  * so content of `secondary_top.css` is in the end in compiled `applications.css` and `secondary_top.css` files
- *= require_tree .
+ *= require_tree ./articles
  *= require_self
  */
 
